pictures no longer stretches in services page, small styling changes in FAQ and services pages

--- a/src/components/PreCare/PreCare.scss
+++ b/src/components/PreCare/PreCare.scss
@@ -17,7 +17,7 @@
         @include title(3rem, 400);
         text-shadow: none;
         &--main{
-            @include title(4rem, 400);
+            @include title(3.5rem, 400);
             text-align: center;
         }
     }
