--- a/src/components/ServiceBlock/ServiceBlock.scss
+++ b/src/components/ServiceBlock/ServiceBlock.scss
@@ -16,7 +16,7 @@
   text-align: center;
   border-radius: 8px;
   text-indent: 1.25rem;
-  @include tablet{
+  @include tablet {
     margin: 1rem 0 2rem;
     padding: 1.5rem 1rem;
   }
@@ -37,49 +37,60 @@
     gap: 2rem;
   }
   &__image {
-    width: 100%;
-    height: 300px;
     border-radius: 8px;
     display: block;
-    @include tablet{
-      min-height: 350px;
-      max-height: 350px;
-      min-width: 400px;
-      max-width: 400px;
-    }
-    @include desktop{
-      min-height: 400px;
-      max-height: 400px;
-      min-width: 500px;
-      max-width: 500px;
+    width: 100%;
+
+    &--container {
+      width: 100%;
+      height: 300px;
+      border-radius: 8px;
+      display: block;
+      overflow: hidden;
+      @include tablet {
+        min-height: 350px;
+        max-height: 350px;
+        min-width: 400px;
+        max-width: 400px;
+      }
+      @include desktop {
+        min-height: 400px;
+        max-height: 400px;
+        min-width: 500px;
+        max-width: 500px;
+      }
     }
   }
   &__text {
     width: 100%;
     margin-bottom: 1rem;
-    @include tablet{
+    @include tablet {
       width: 400px;
     }
-    @include desktop{
+    @include desktop {
       width: 500px;
     }
   }
   &__title {
     @include title(2rem, 400);
+    margin-top: 1rem;
     @include tablet {
       font-size: 2.5rem;
+      margin-top: 0;
     }
   }
   &__body {
     @include body(1rem);
     margin: 0 auto;
     width: 100%;
+    max-width: 450px;
     @include tablet {
       margin: 1rem;
       padding-right: 1rem;
       font-size: 1.25rem;
       width: 100%;
       text-align: left;
+      max-width: none;
     }
   }
 }
