--- a/src/pages/FAQ/FAQ.scss
+++ b/src/pages/FAQ/FAQ.scss
@@ -10,8 +10,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 2rem auto 0;
+        max-width: 400px;
+        text-align: center;
         @include tablet{
             font-size: 3rem;
+            max-width: 100%;
         }
     }
     &-list{
